Add ExpandCollapse UI Automation pattern to combo boxes

Also add support to expandable/expanded states to QAccessibleComboBox
in widgets. QtDeclarative will still require updates so that QML combo
boxes report the expanded/collapsed state and react to UIA actions.

Task-number: QTBUG-103591
Change-Id: Iff8ba5e3143778ce17998dbe7f5f76cae658dc19
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit ecd41111a3a7100f20e72b811b1010bc45e94127)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>